--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,76 +14,7 @@
   </head>
   <body>
     
-      <header>
-                 
-                <nav class="navbar navbar-expand-lg navbar-dark"  style="background-color:#00a8ff;">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                  <a class="navbar-brand" href="#">LOGO</a>
-                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                      <a class="nav-link " href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item  nav-href">
-                      <a class="nav-link"  href="#">Juguetes</a>
-                    </li>
-
-                    <li class="nav-item nav-href">
-                      <a class="nav-link" href="#">Personajes</a>
-                    </li>
-
-                    <li class="nav-item nav-href">
-                      <a class="nav-link" href="#">Edad</a>
-                    </li>
-
-                    <li class="nav-item nav-href">
-                      <a class="nav-link" href="#">Para la escuela</a>
-                    </li>
-
-                    <li class="nav-item nav-href">
-                      <a class="nav-link" href="#">Sucursales</a>
-                    </li>
-                    <li class="nav-item nav-href">
-                      <a class="nav-link " href="#" tabindex="-1" >Login</a>
-                    </li>
-                
-                  </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="buscar" aria-label="Search">
-                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Buscar</button>
-                  </form>
-                </div>
-              </nav>
-
-              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="/images/slide-cry-babies.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/slider-lol.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/slide-fortnite.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-            </div>
-      </header>
+    <%- include('./partials/header')%>
       <section class="container ">
               <div class="row">
                <article class="categorias col-12 col-md-3 ">
@@ -112,61 +43,10 @@
 
       </section>
       <!---->
-      <footer class="container-fluid">
-              <section class="row">
-                 <div class="caja-footer">
-                    <article class="col-12 col-sm-6 col-md-6 col-lg-4">
-                        <h5>Suscribete para recibir novedades</h5>
-                        <p>Actualizamos nuestros productos constantemente
-                          de acuerdo a las tendencias.
-                        </p>
-                        <form class="form-inline" align="left">
-                          <div class="form-group mb-2">
-                            <label for="staticEmail2" class="sr-only">Email</label>
-                            <input type="text" readonly class="form-control-plaintex outline-light" id="suscrubur" value="email@ejemplo.com">
-                          </div>
-                          
-                          <button type="submit" class="btn btn-outline-light  mb-2">Suscribir</button>
-                        </form>
-                    </article>
-                    
-
-                   
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
-                      <ul class="list-unstyled text-small">
-                      <li>+54 11 0000 0000</li>
-                      <li>INFO@JUGUETERIA.COM</li>
-                      <li>SUCURSAL</li>
-                    </ul>
-                    </div>
-
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
-                      <ul class="list-unstyled text-small">
-                      <li>INFORMACION SOBRE ENVIOS</li>
-                      <li>DEVOLUCIONES</li>
-                      <li>VENTAS EMPRESARIALES</li>
-                    </ul>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
-                      <ul class="list-unstyled text-small">
-                      <li>POLITICA DE PAGOS</li>
-                      <li>TERMINOS Y CONDICIONES</li>
-                      <li>POLITICA DE PRIVACIDAD</li>
-                    </ul>
-                    </div>
-
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-2">
-                      <ul class="list-unstyled text-small">
-                      <li>SOBRE NOSOTROS</li>
-                      <li>SUCURSALES</li>
-                    </ul>
-                    </div>
-                  </div> <!--caja footer-->
-              </section>
-      </footer>
+     
 
    
-
+      <%- include('./partials/footer')%>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
