--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -31,7 +31,13 @@
         </li>
 
         <li class="nav-item nav-href">
-          <a class="nav-link " href="#" tabindex="-1" >Login</a>
+          <a class="nav-link " href="/users/login" tabindex="-1" >Login</a>
+        </li>
+        <li class="nav-item nav-href">
+          <a class="nav-link " href="/users/register" tabindex="-1" >Register</a>
+        </li>
+        <li class="nav-item nav-href">
+          <a class="nav-link " href="/users/logout" tabindex="-1" >Logout</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
