--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -8,15 +8,22 @@
     <%- include('../partials/header')%>
     <br>
     <section class="container col-md-4 col-sm-4 col-lg-4 card">
-            <form>
+            <form method="POST" action="/users/login">
                 <div class="form-group">
                 <label for="exampleInputEmail1">Dirección de Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
                 <small id="emailHelp" class="form-text text-muted">Nunca compartiremos su correo electrónico con nadie más.</small>
                 </div>
                 <div class="form-group">
                 <label for="exampleInputPassword1">Clave</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" name="remember_user">Recordar mi usuario
+                        </label>
+                    </div>
                 </div>
                
                 <button type="submit" class="btn btn-primary">Login</button>
