--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -6,55 +6,196 @@
 <body>
     <%- include('../partials/header')%>
     <section class="container main">
-        <h2>Regístrate</h2>
-        <div class="row">
-                
-                <form action="/users/register" method="POST" enctype="multipart/form-data">
-                        <div>
-                                <label>Nombre:</label>
-                                <input type="text" name="user_name">
-                        </div>
-                        <div>
-                                <label>Apellido:</label>
-                                <input type="text" name="user_surname">
-                        </div>
-                        <div>
-                                <label>Email:</label>
-                                <input type="email" name="user_email">
-                        </div>
-                        <div>
-                                <label>Usuario:</label>
-                                <input type="text" name="user">
-                        </div>
-                        <div>
-                                <label>Contraseña:</label>
-                                <input type="password" name="user_password">
-                        </div>
-                        <div>
-                                <label>Avatar:</label>
-                                <input type="file" name="user_avatar">
-                        </div>
-                        <div>
-                                <label for="genero">Género</label>
-                        <select name="genero" class="form-control" >
-                            <option selected>Seleccione</option>
-                            <option>Femenino</option>
-                            <option>Masculino</option>
-                            <option>Otro</option>
-                        </select>
-                        </div>
-                        <div>
-                                <label>Direccion:</label>
-                                <input type="text" name="user_address">
-                        </div>
-                        <div>
-                                <label>Movil:</label>
-                                <input type="text" name="movil">
-                        </div>
-                        <button type="submit">Registrarse</button>
-                </form>  
-           
-        </div> <!-- Row-->
+     
+        <!-- Register-Form -->
+	<div class="container" style="margin-top:30px; margin-bottom: 30px;">
+		<div class="row justify-content-center">
+			<div class="col-md-10">
+				<h2>Formulario de registro</h2>
+
+				<% if (typeof errors !== 'undefined') { %>
+				<ul>
+					<% for(let oneError of errors) { %>
+					<li class="text-danger"> <%= oneError.msg %> </li>
+					<% } %>
+				</ul>
+				<% } %>
+
+				<form method="POST" action="/users/register" enctype="multipart/form-data">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<label><b>Nombre:</b></label>
+								<input 
+									type="text" 
+									name="name" 
+									class="form-control
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('name', errors) ? 'is-invalid' : null %> 
+									<% } %>
+									"
+									value="<%= typeof oldData !== 'undefined' ? oldData.name : null %>"
+								>
+								<i class="invalid-feedback">
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('name', errors) ? hasErrorGetMessage('name', errors) : null %>
+									<% } %>
+								</i>
+							</div>
+                                                </div>
+                                                
+                                                <div class="col-md-6">
+							<div class="form-group">
+								<label><b>Apellido:</b></label>
+								<input 
+									type="text" 
+									name="surname" 
+									class="form-control
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('surname', errors) ? 'is-invalid' : null %> 
+									<% } %>
+									"
+									value="<%= typeof oldData !== 'undefined' ? oldData.surname : null %>"
+								>
+								<i class="invalid-feedback">
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('surname', errors) ? hasErrorGetMessage('surname', errors) : null %>
+									<% } %>
+								</i>
+							</div>
+                                                </div>
+                                                
+                                                <div class="col-md-6">
+							<div class="form-group">
+								<label><b>Usuario:</b></label>
+								<input 
+									type="text" 
+									name="user" 
+									class="form-control
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('user', errors) ? 'is-invalid' : null %> 
+									<% } %>
+									"
+									value="<%= typeof oldData !== 'undefined' ? oldData.user : null %>"
+								>
+								<i class="invalid-feedback">
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('user', errors) ? hasErrorGetMessage('user', errors) : null %>
+									<% } %>
+								</i>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<label><b>Correo electrónico:</b></label>
+								<input 
+									type="text" 
+									name="email" 
+									class="form-control
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('email', errors) ? 'is-invalid' : null %> 
+									<% } %>
+									"
+									value="<%= typeof oldData !== 'undefined' ? oldData.email : null %>"
+								>
+								<i class="invalid-feedback">
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+									<%= hasErrorGetMessage('email', errors) ? hasErrorGetMessage('email', errors) : null %>
+									<% } %>
+								</i>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<label><b>Password:</b></label>
+								<input 
+									type="password" 
+									name="password" 
+									class="form-control
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('password', errors) ? 'is-invalid' : null %> 
+									<% } %>
+									"
+								>
+								<i class="invalid-feedback">
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+									<%= hasErrorGetMessage('password', errors) ? hasErrorGetMessage('password', errors) : null %>
+									<% } %>
+								</i>
+							</div>
+						</div>
+					
+						<div class="col-md-6">
+							<div class="form-group">
+								<label><b>País de nacimiento:</b></label>
+								<select 
+									name="country" 
+                                                                        class="form-control
+                                                                        <% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('country', errors) ? 'is-invalid' : null %> 
+									<% } %>
+                                                                        "
+								>
+									<option value="">Elegí un país</option>
+									<%  
+										let countries = [
+											{code: 'Arg', name: 'Argentina'},
+											{code: 'Bol', name: 'Bolivia'},
+											{code: 'Bra', name: 'Brasil'},
+											{code: 'Col', name: 'Colombia'},
+											{code: 'Chi', name: 'Chile'},
+											{code: 'Ecu', name: 'Ecuador'},
+											{code: 'Par', name: 'Paraguay'},
+											{code: 'Per', name: 'Perú'},
+											{code: 'Uru', name: 'Uruguay'},
+											{code: 'Ven', name: 'Venezuela'},
+										];
+									%>
+									<% for (const oneCountry of countries) { %>
+										<option value="<%= oneCountry.code %>"> 
+											<%= oneCountry.name %> 
+										</option>
+									<% } %>
+                                                                </select>
+                                                                <i class="invalid-feedback">
+									<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+									<%= hasErrorGetMessage('country', errors) ? hasErrorGetMessage('country', errors) : null %>
+									<% } %>
+								</i>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<label><b>Imagen de perfil:</b></label>
+								<div class="custom-file">
+									<input 
+										type="file" 
+										name="user_avatar"
+										class="custom-file-input
+										<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+											<%= hasErrorGetMessage('user_avatar', errors) ? 'is-invalid' : null %> 
+										<% } %>
+										"
+									>
+									<label class="custom-file-label">Choose file...</label>
+									<i class="invalid-feedback">
+										<% if (typeof hasErrorGetMessage !== 'undefined') { %>
+										<%= hasErrorGetMessage('user_avatar', errors) ? hasErrorGetMessage('user_avatar', errors) : null %>
+										<% } %>
+									</i>
+								</div>
+							</div>
+						</div>
+						<div class="col-12">
+							<button type="submit" class="btn btn-primary">Registrarse</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+        </div>
+        
+	
     </section>
 
     <%- include('../partials/footer')%>
